# incrdble

./: .gitignore  .mise.toml  README.rst  dagger.json  pyproject.toml
.github/workflows/: main.yaml
dagger/: pyproject.toml
dagger/src/main/: __init__.py
deploy/: application.yaml.j2  configmap.yaml  ingress.yaml
incrdble/: __init__.py  deps.py  main.py  models.py  probes.py
incrdble/api/v1/: __init__.py
incrdble/endpoints/api/: __init__.py
incrdble/models/: k8s.py  web.py
incrdble/web/: __init__.py
templates/: base.html.j2  crd.html.j2  index.html.j2
