[project]
name = "incrdble"
description = "Incrdble CRD reference viewer"
readme = "README.rst"
authors = [
    { name = "Morten Lied Johansen", email = "mortenjo@ifi.uio.no" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "fiaas-logging>=0.1.1",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
    "lightkube>=0.15.5",
]
dynamic = [
    "version",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "incrdble/__init__.py"
